src/objects/CollegeApplication__c.object
<CustomObject>
    <fields>
        <fullName>AddCommentsDump__c</fullName>
        <label>Add Comments Dump</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Add_Comments__c</fullName>
        <label>Add Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>AnnualTutionFees__c</fullName>
        <formula>College__r.AnnualTutionFees__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Annual Tution Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ApplicationFees__c</fullName>
        <label>Application Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>College__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>College</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>College Applications</relationshipLabel>
        <relationshipName>College_Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CurrentTotalCost__c</fullName>
        <formula>GRE_Score_Cost__c + TOEFL_Score_Cost__c + ApplicationFees__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Total Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Deadline__c</fullName>
        <label>Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GRE_Score_Cost__c</fullName>
        <defaultValue>27</defaultValue>
        <label>GRE Score Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HomePage__c</fullName>
        <formula>College__r.Website</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Home Page</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsInactive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsInactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LastCommentDump__c</fullName>
        <label>Last Comment Dump</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LoginPage__c</fullName>
        <label>Login Page</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Discovery/Initial Analysis</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Shortlisted</fullName>
                </value>
                <value>
                    <fullName>Shortlisted &amp; Signed Up</fullName>
                </value>
                <value>
                    <fullName>SOP/LOR In Progress</fullName>
                </value>
                <value>
                    <fullName>Application In Progress</fullName>
                </value>
                <value>
                    <fullName>Application Submitted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TOEFL_Score_Cost__c</fullName>
        <defaultValue>20</defaultValue>
        <label>TOEFL Score Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <label>Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WindowOpen__c</fullName>
        <label>Window Open</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>YocketLink__c</fullName>
        <label>Yocket Link</label>
        <type>Url</type>
    </fields>
    <label>College Application</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ApplicationFees__c</columns>
        <columns>College__c</columns>
        <columns>Deadline__c</columns>
        <columns>HomePage__c</columns>
        <columns>LoginPage__c</columns>
        <columns>Password__c</columns>
        <columns>Status__c</columns>
        <columns>Username__c</columns>
        <columns>WindowOpen__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Application Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>College Applications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>